--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,22 +8,30 @@ if(NOT WIN32)
     unset(BII_LIB_SRC)
 endif()
 
-# Add additional test targets
+#add_definitions(-DBOOST_NOWIDE_NO_LIB)
+
+# Add an additional test target that matches test_env; different defines will be set later.
 if(WIN32)
     LIST(APPEND BII_BLOCK_EXES test_env_win)
-    SET(BII_test_env_win_SRC test/env.cpp)
+    SET(BII_test_env_win_SRC ${BII_test_env_SRC})
+    SET(BII_test_env_win_DEPS ${BII_test_env_DEPS})
+    SET(BII_test_env_win_SYSTEM_HEADERS ${BII_test_env_SYSTEM_HEADERS})
 endif()
 
 ADD_BIICODE_TARGETS()
 
 # Include Boost and local includes
 bii_find_boost()
-target_include_directories(${BII_BLOCK_TARGET} INTERFACE ${Boost_INCLUDE_DIRS} .)
+target_include_directories(${BII_BLOCK_TARGET} INTERFACE ${Boost_INCLUDE_DIRS})
+
+if(MSVC)
+    target_compile_options(${BII_BLOCK_TARGET} INTERFACE /EHsc /W3)
+endif()
 
 # Configure extra tests
 if(WIN32)
-    set_target_properties(${BII_BLOCK_TARGET} PROPERTIES COMPILE_DEFINITIONS NOWIDE_WINDOWS)
-    set_target_properties(BII_test_env_win_TARGET PROPERTIES COMPILE_DEFINITIONS NOWIDE_TEST_INCLUDE_WINDOWS)
+    set_target_properties(${BII_BLOCK_TARGETS} PROPERTIES COMPILE_DEFINITIONS NOWIDE_WINDOWS)
+    set_target_properties(${BII_test_env_win_TARGET} PROPERTIES COMPILE_DEFINITIONS NOWIDE_TEST_INCLUDE_WINDOWS)
 endif()
 
 # Add tests
@@ -35,4 +43,3 @@ endforeach()
 
 add_test(NAME ${BII_test_system_TARGET}_n COMMAND ${BII_test_system_TARGET} -n)
 add_test(NAME ${BII_test_system_TARGET}_w COMMAND ${BII_test_system_TARGET} -w)
-
