--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,8 @@ version: 1.0.{build}
 skip_tags: true
 clone_folder: c:\projects\boost-nowide
 os: unstable
+environment:
+  BOOST_ROOT: c:\Libraries\boost
 platform:
   - Win32
   - x64
@@ -15,8 +17,10 @@ install:
 before_build:
   - if "%PLATFORM%" == "Win32" set CMAKE_GENERATOR="Visual Studio 12"
   - if "%PLATFORM%" == "x64"   set CMAKE_GENERATOR="Visual Studio 12 Win64"
+  - if "%PLATFORM%" == "Win32" set BOOST_DEFINITIONS=-DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_ROOT%/lib32-msvc-12.0"
+  - if "%PLATFORM%" == "x64"   set BOOST_DEFINITIONS=-DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_LIBRARYDIR="%BOOST_ROOT%/lib64-msvc-12.0"
   - bii init -l simple
-  - bii cpp:configure -G %CMAKE_GENERATOR% -DCMAKE_BUILD_TYPE=%Configuration%
+  - bii cpp:configure -G %CMAKE_GENERATOR% -DCMAKE_BUILD_TYPE=%Configuration% %BOOST_DEFINITIONS%
 build_script:
   - bii cpp:build
 test_script:
