Revert "Fix builds after publishing to Biicode"
This reverts commit e4b7366375110037206d6e88eb4b97d973801646.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,10 @@ install:
   - wget https://s3.amazonaws.com/biibinaries/thirdparty/cmake-3.0.2-Linux-64.tar.gz
   - sudo tar -xzf cmake-3.0.2-Linux-64.tar.gz --strip 1 -C /usr
 script:
-  - cd /tmp
-  - bii init boost-nowide
-  - cd boost-nowide
-  - bii new MikaelSmith/boost-nowide
-  - shopt -s dotglob && mv $TRAVIS_BUILD_DIR/* blocks/MikaelSmith/boost-nowide
+  - bii init -l simple
+  - bii find
   - bii cpp:build -- -j2
-  - cd build
+  - cd bii/build
   - ctest -V 2>&1 | c++filt
 os:
   - linux
